--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   color-scheme: dark;
 }
 
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
@@ -124,6 +125,13 @@
   text-indent: -9999em;
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
+}
+
+.box {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: #ff0066;
 }
 
 @keyframes mulShdSpin {
